added specific support for sealed hierarchies