@@ -1,10 +1,5 @@
 package com.infobip.jackson.dynamic;
 
-import static org.assertj.core.api.BDDAssertions.then;
-
-import java.util.Arrays;
-import java.util.List;
-
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.infobip.jackson.TestBase;
@@ -13,6 +8,10 @@ import lombok.AllArgsConstructor;
 import lombok.Getter;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+
+import java.util.List;
+
+import static org.assertj.core.api.BDDAssertions.then;
 
 @AllArgsConstructor
 class MultiHierarchyDynamicDeserializerTest extends TestBase {
@@ -78,27 +77,27 @@ class MultiHierarchyDynamicDeserializerTest extends TestBase {
     @Test
     void shouldDeserializeListOfAnimals() throws JsonProcessingException {
         // given
-        String json = objectMapper.writeValueAsString(Arrays.asList(new Human("givenName")));
+        String json = objectMapper.writeValueAsString(List.of(new Human("givenName")));
 
         // when
         List<Animal> actual = objectMapper.readValue(json, new TypeReference<List<Animal>>() {
         });
 
         // then
-        then(actual).isEqualTo(Arrays.asList(new Human("givenName")));
+        then(actual).isEqualTo(List.of(new Human("givenName")));
     }
 
     @Test
     void shouldDeserializeListOfMammals() throws JsonProcessingException {
         // given
-        String json = objectMapper.writeValueAsString(Arrays.asList(new Human("givenName")));
+        String json = objectMapper.writeValueAsString(List.of(new Human("givenName")));
 
         // when
         List<Mammal> actual = objectMapper.readValue(json, new TypeReference<List<Mammal>>() {
         });
 
         // then
-        then(actual).isEqualTo(Arrays.asList(new Human("givenName")));
+        then(actual).isEqualTo(List.of(new Human("givenName")));
     }
 
     @Test
